--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,39 @@
-pandas
-numpy
-openai
-requests
-python-dotenv
-tiktoken
-matplotlib-pyplot
-bs4
-seaborn
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
+annotated-types==0.7.0
+anyio==4.11.0
+attrs==25.4.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
+colorama==0.4.6
+distro==1.9.0
+frozenlist==1.8.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.11
+jiter==0.12.0
+multidict==6.7.0
+numpy==2.3.4
+openai==2.9.0
+pandas==2.3.3
+propcache==0.4.1
+pydantic==2.12.4
+pydantic_core==2.41.5
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+pytz==2025.2
+regex==2025.11.3
+requests==2.32.5
+six==1.17.0
+sniffio==1.3.1
+tiktoken==0.12.0
+tqdm==4.67.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+yarl==1.22.0
+uvicorn-0.40.0
+fastapi-0.128.0
