--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,9 @@ yarl==1.22.0
 uvicorn-0.40.0
 fastapi-0.128.0
 seaborn
-mayplotlib
+matplotlib
 beautifulsoup4
 face-recognition
 opencv-python
+scikit-learn
+joblib
